# Projet-GPU

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  bounding_boxes  bounding_boxes.json  compile.sh  requirements.txt
.nix/: nix-cmake.sh  nix-run.sh
json/: tmp_json
run/: debug_run.py  frame_utils.py  run.py
src/: bounding_box.cu  bounding_box.cuh  env.cu  env.cuh  main.cpp  matrix_image.hpp  myutils.cpp  myutils.hpp  render_cpu.cpp  render_cpu.h  render_cpu.hpp  render_gpu.cu  render_gpu.cuh
src/cudaFunctions/: cudaFunctions.cu  cudaFunctions.cuh
src/matrix_image/: matrix_image.cpp  matrix_image.cu  matrix_image.cuh  matrix_image.h
src/render_gpu/: gray_blur.cu  gray_blur.cuh  render_gpu.cu  render_gpu.cuh  tools.cu  tools.cuh
